name:                pips
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pips#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, AST, PIPsParser, Runtime, Terp, StdLib
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , split
  default-language:    Haskell2010

executable pips-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pips
                     , parsec
  default-language:    Haskell2010

test-suite pips-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pips
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pips
